syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/addon.proto";
import "stremio/core/types/meta_item.proto";
import "stremio/core/types/stream.proto";
import "stremio/core/types/rating.proto";

message MetaDetails {
  optional Selected selected = 1;
  optional string title = 2;
  optional LoadableMetaItem meta_item = 3;
  repeated LoadableStreams streams = 4;
  optional LoadableStream last_used_stream = 5;
  optional LoadableRatingInfo rating_info = 6;

  message Selected {
    required stremio.core.types.ResourcePath meta_path = 1;
    optional stremio.core.types.ResourcePath stream_path = 2;
    required bool guess_stream_path = 3;
  }
}

message LoadableMetaItem {
  required string title = 1;
  required stremio.core.types.ResourceRequest request = 2;
  oneof content {
    Loading loading = 3;
    Error error = 4;
    stremio.core.types.MetaItem ready = 5;
  }
}

message LoadableStreams {
  required string title = 1;
  required stremio.core.types.ResourceRequest request = 2;
  oneof content {
    Loading loading = 3;
    Error error = 4;
    Streams ready = 5;
  }
}

message Streams {
  repeated stremio.core.types.Stream streams = 1;
}

message LoadableStream {
  required stremio.core.types.ResourceRequest request = 1;
  oneof content {
    Loading loading = 2;
    Error error = 3;
    OptionStream ready = 4;
  }
}

message OptionStream {
  optional stremio.core.types.Stream stream = 1;
}

message LoadableRatingInfo {
  oneof content {
    Loading loading = 1;
    Error error = 2;
    stremio.core.types.RatingInfo ready = 3;
  }
}